kubernetes-manifests/talos/tuppr/upstream/tuppr.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tuppr-metrics-service
  namespace: talos
  labels:
    app.kubernetes.io/name: tuppr
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: tuppr
---
apiVersion: v1
kind: Service
metadata:
  name: tuppr-webhook-service
  namespace: talos
  labels:
    app.kubernetes.io/name: tuppr
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
      name: webhook
  selector:
    app.kubernetes.io/name: tuppr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tuppr
  namespace: talos
  labels:
    app.kubernetes.io/name: tuppr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tuppr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tuppr
    spec:
      enableServiceLinks: false
      serviceAccountName: tuppr
      priorityClassName: system-node-critical
      securityContext:
        fsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
      containers:
        - name: manager
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65532
          image: ghcr.io/home-operations/tuppr:0.1.35
          imagePullPolicy: IfNotPresent
          command:
            - /manager
          args:
            - --log-level=debug
            - --leader-elect=true
            - --metrics-bind-address=:8080
            - --health-probe-bind-address=:8081
            - --talosconfig-secret=tuppr-talosconfig
            - --metrics-secure=false
            - --metrics-service-name=tuppr-metrics-service
            - --webhook-config-name=tuppr-validating-webhook
            - --webhook-service-name=tuppr-webhook-service
            - --webhook-secret-name=tuppr-webhook-server-cert
          ports:
            - name: webhook-server
              containerPort: 9443
              protocol: TCP
            - name: metrics
              containerPort: 8080
              protocol: TCP
            - name: health
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources: {}
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
            - name: talosconfig
              mountPath: /var/run/secrets/talos.dev
              readOnly: true
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: tuppr-webhook-server-cert
        - name: talosconfig
          secret:
            secretName: tuppr-talosconfig
            defaultMode: 420
      tolerations:
        - key: CriticalAddonsOnly
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: tuppr-validating-webhook
  labels:
    app.kubernetes.io/name: tuppr
webhooks:
  - name: vkubernetesupgrade.kb.io
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: tuppr-webhook-service
        namespace: talos
        path: /validate-tuppr-home-operations-com-v1alpha1-kubernetesupgrade
    failurePolicy: Fail
    sideEffects: None
    rules:
      - apiGroups:
          - tuppr.home-operations.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - kubernetesupgrades
  - name: vtalosupgrade.kb.io
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: tuppr-webhook-service
        namespace: talos
        path: /validate-tuppr-home-operations-com-v1alpha1-talosupgrade
    failurePolicy: Fail
    sideEffects: None
    rules:
      - apiGroups:
          - tuppr.home-operations.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - talosupgrades
